# pdfium-render-text-garbage

./: .gitignore  Cargo.toml  README.md  build.sh
release/: index.html  pdfium.js
src/: text.rs  wasm.rs
