[package]
name = "pdfium-render-text-garbage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm.rs"

[dependencies]
pdfium-render = { version = "0.8.26", default-features = false, features = ["thread_safe", "image_025", "image", "pdfium_6666"]}
image = "^0"
js-sys = "^0"
log = "^0"
wasm-bindgen = "^0"
wasm-bindgen-futures = "^0"
web-sys = { version = "^0", features = ["ImageData"] }
